added about us and contact us

--- a/index.html
+++ b/index.html
@@ -7,7 +7,14 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
+    <header>
     <h1>My Portfolio</h1>
+    <nav>
+      <li><a href="#">HOME</a></li>
+      <li><a href="about.html">About Us</a></li>
+      <li><a href="#My_contacts">Contacts Us</a></li>
+    </nav>
+    </header>
     <p>
       Cars have always been more than just machines to me they are rolling
       pieces of art if not engineering marvels. Furthermore they are a symbol of
@@ -33,5 +40,14 @@
     <ol>
         <h1>Remember Champs Arsenal is the TEAM</h1>
     </ol>
+    <footer>
+      <nav id="My_contacts">
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="about.html">About Me</a></li>
+          <li><a href="contact.html">Contact Us</a></li>
+        </ul>
+      </nav>
+    </footer>
   </body> 
 </html>
