--- a/contact.html
+++ b/contact.html
@@ -42,6 +42,14 @@
         </p>
 
     </header>
+     <footer>
+      <p>© 2023 Tom's Portfolio. All rights reserved.</p>
+      <p class="sicon"> 
+        <a href="https://twitter.com" target="_blank">Twitter</a> | 
+        <a href="https://wa.me/+254779185210" target="_blank">Whatsapp</a> | 
+        <a href="https://www.instagram.com/unco_motii" target="_blank">Instagram</a>
+      </p>
+      </footer>
 </body>
 
 </html>
