--- a/index.html
+++ b/index.html
@@ -49,13 +49,12 @@
         <h1><u><em>Remember Champs Arsenal is the TEAM</em></u></h1>
     </ol>
     <footer>
-      <nav>
-        <ul>
-          <li><a href="#"><b>Home</b></li>
-          <li><a href="about.html">About Me</a></li>
-          <li><a href="contact.html">Contact Me</a></li>
-        </ul>
-      </nav>
-    </footer>
-  </body> 
+      <p>© 2023 Tom's Portfolio. All rights reserved.</p>
+      <p class="sicon"> 
+        <a href="https://twitter.com" target="_blank">Twitter</a> | 
+        <a href="https://wa.me/+254779185210" target="_blank">Whatsapp</a> | 
+        <a href="https://www.instagram.com/unco_motii" target="_blank">Instagram</a>
+      </p>
+      </footer>
+ </body> 
 </html>
